--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ author:
   location         : "Harbin, China"
   employer         :
   pubmed           : 
+  googlescholar    : "https://scholar.google.com"
   email            : "wangjiachi@stu.hit.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
