--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/wjc-cs"
+  github           : "wjc-cs"
   google_plus      :
   keybase          :
   instagram        :
