--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Jiachi Wang"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Harbin Institute of Technology"
-  location         : "Harbin, China"
+  bio              : "Tsinghua University"
+  location         : "Beijing, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com"
